--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Project Dashboard Frontend</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
+<body style="background-color: #e5e5e5">
 <div id="root"></div>
 </body>
 
