--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 </head>
 
-<body style="background-color: #e5e5e5">
+<body style="background-color: #e5e5e5; margin: 0; padding: 0;">
 <div id="root"></div>
 </body>
 
