--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
+    <link href='./styles.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body style="background-color: #e5e5e5; margin: 0; padding: 0;">
