--- a/www/index.html
+++ b/www/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='/styles.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
-    <link href='./styles.css' rel='stylesheet' type='text/css'>
 </head>
 
 <body style="background-color: #e5e5e5; margin: 0; padding: 0;">
 <div id="root"></div>
 </body>
 
-<script src="bundle.js"></script>
+<script src="/bundle.js"></script>
 
 </html>
